Change to uplod to the production

--- a/investors/config.json
+++ b/investors/config.json
@@ -1,6 +1,6 @@
 {
     "wbService": "http://www.gel.co.th/mail-scripts/index.php",
     "irService": "http://www.gel.co.th/mail-scripts/index.php",
-    "iaEmailAddress": "chirunnuj@gmail.com",
-    "irEmailAddress": "chirunnuj@gmail.com"
+    "iaEmailAddress": "ir@gel.co.th",
+    "irEmailAddress": "ir@gel.co.th"
 }
